--- a/styles/styles.css
+++ b/styles/styles.css
@@ -92,7 +92,7 @@ body {
 
 .navigation-link:focus,
 .navigation-link-current:focus {
-    color:  #000;
+    color:  #000000;
 }
 
 .navigation-link:active,
@@ -140,7 +140,7 @@ body {
 }
 
 .navigation-user-link-search:focus {
-  color: #000;
+  color: #000000;
 }
 
 .navigation-user-link-search:active {
@@ -154,7 +154,7 @@ body {
 }
 
 .navigation-user-link-favorite:focus {
-  color: #000;
+  color: #000000;
 }
 
 .navigation-user-link-favorite:active {
@@ -235,7 +235,7 @@ body {
 }
 
 .header-button {
-  color: #fff;
+  color: #ffffff;
   background-color: #756157;
   font-size: 16px;
   font-style: normal;
@@ -269,7 +269,7 @@ body {
 }
 
 .header-button:disabled {
-  background-color: #E5E5E5;
+  background-color: #e5e5e5;
 }
 
 .navigation-user {
@@ -283,7 +283,7 @@ body {
 /* Приветственный блок */
 
 .hero {
-  color: #fff;
+  color: #ffffff;
   background-color: #05385a;
   background-image: url("../images/divider.svg"), url("../images/substrate-hero.jpg");
   background-size: auto, cover;
@@ -332,7 +332,7 @@ body {
 
 .slogan,
 .invitation {
-  color: #000000;
+  color: #333333;
   background-color: #ffffff;
   text-align: center;
   font-family: "PT Sans", sans-serif;
@@ -358,7 +358,7 @@ body {
 }
 
 .advantages-item h3 {
-  color: #fff;
+  color: #ffffff;
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
@@ -382,7 +382,7 @@ body {
 
 .advantages-item p {
   margin: 0;
-  color: #fff;
+  color: #ffffff;
   font-family: "PT Sans", sans-serif;
   font-weight: 400;
   font-size: 18px;
@@ -393,7 +393,7 @@ body {
 
 .advantages-item-light-blue h3,
 .advantages-item-blue h3 {
-  color: #000;
+  color: #000000;
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
@@ -419,7 +419,7 @@ body {
 .advantages-item-light-blue p,
 .advantages-item-blue p {
   margin: 0;
-  color: #000;
+  color: #000000;
   font-family: "PT Sans", sans-serif;
   font-weight: 400;
   font-size: 18px;
@@ -538,7 +538,7 @@ body {
 }
 
 .infrastructure-desc {
-  color: #333;
+  color: #333333;
   font-size: 18px;
   font-style: normal;
   line-height: 21px;
@@ -575,7 +575,7 @@ body {
 }
 
 .search-desc {
-  color: #000000;
+  color: #333333;
   font-size: 22px;
   font-style: normal;
   font-family: "PT Sans", sans-serif;
@@ -588,7 +588,7 @@ body {
 }
 
 .search-button {
-  color: #fff;
+  color: #ffffff;
   background-color: #756157;
   font-size: 20px;
   font-style: normal;
@@ -606,7 +606,6 @@ body {
   padding: 8px;
   justify-content: center;
   border-radius: 4px 4px 4px 4px;
-  user-select: none;
 }
 
 .search-button:hover {
@@ -622,7 +621,7 @@ body {
 }
 
 .search-button:disabled {
-  background-color: #E5E5E5;
+  background-color: #e5e5e5;
 }
 
 /* Рассылка */
@@ -645,7 +644,7 @@ body {
 }
 
 .subscribe-title {
-  color: #fff;
+  color: #ffffff;
   font-size: 30px;
   font-style: normal;
   font-family: "PT Sans", sans-serif;
@@ -656,7 +655,7 @@ body {
 }
 
 .subscribe-desc {
-  color: #fff;
+  color: #ffffff;
   font-size: 22px;
   font-style: normal;
   font-family: "PT Sans", sans-serif;
@@ -681,7 +680,7 @@ body {
 .subscribe-field {
   padding: 14px 20px;
   width: 100%;
-  color: #000;
+  color: #000000;
   font-size: 18px;
   font-style: normal;
   font-family: "PT Sans", sans-serif;
@@ -695,8 +694,8 @@ body {
 }
 
 .button-subscribe {
-  color: #fff;
-  background-color: #82B3D3;
+  color: #ffffff;
+  background-color: #82b3d3;
   font-size: 20px;
   font-style: normal;
   font-family: "PT Sans", sans-serif;
@@ -771,7 +770,7 @@ body {
 }
 
 .footer-phone {
-  color: #000;
+  color: #000000;
   font-size: 40px;
   font-style: normal;
   font-family: "PT Sans", sans-serif;
@@ -790,7 +789,7 @@ body {
 }
 
 .footer-phone:focus {
-  color: #000;
+  color: #000000;
 }
 
 .footer-phone:active {
@@ -810,7 +809,7 @@ body {
 }
 
 .copyright:focus {
-  color: #000;
+  color: #000000;
 }
 
 .copyright:active {
@@ -830,8 +829,8 @@ body {
 /* Гостиницы Седоны: фильтр */
 
 .catalog-header {
-  color: #FFFFFF;
-  background-color: #82B3D3;
+  color: #ffffff;
+  background-color: #685959;
   background-image: url("../images/substrate-filter.png");
   background-size: cover;
   background-repeat: no-repeat;
@@ -860,7 +859,7 @@ body {
 }
 
 .breadcrumbs-item {
-  color: #fff;
+  color: #ffffff;
   font-size: 16px;
   font-style: normal;
   font-family: "PT Sans", sans-serif;
@@ -884,7 +883,7 @@ body {
 
 .breadcrumbs-link {
   text-decoration: none;
-  color: #fff;
+  color: #ffffff;
 }
 
 /* Инфраструктура, чекбоксы, множественный выбор + Тип жилья, радиокнопки, единственный выбор*/
@@ -927,7 +926,7 @@ body {
   left: 0;
   width: 20px;
   height: 20px;
-  background: #FFFFFF;
+  background: #ffffff;
 }
 
 .control-input[type="checkbox"]:checked + .control-mark::before {
@@ -985,7 +984,7 @@ body {
   left: 5px;
   width: 10px;
   height: 10px;
-  background-color: #3F5E72;
+  background-color: #3f5e72;
   border-radius: 50%;
 }
 
@@ -1003,8 +1002,8 @@ body {
   width: 100%;
   max-width: 191px;
   padding-top: 55px;
-  justify-content: flex-end;
-  position: fixed;
+  justify-content: flex-start;
+
 }
 
 .form-container-left {
@@ -1031,7 +1030,7 @@ body {
   left: 0;
   width: 20px;
   height: 20px;
-  background: #FFFFFF;
+  background: #ffffff;
 }
 
 .catalog-filter-item:not(:last-child) {
@@ -1039,7 +1038,7 @@ body {
 }
 
 .control-label {
-  color: #fff;
+  color: #ffffff;
   font-size: 18px;
   font-style: normal;
   font-family: "PT Sans", sans-serif;
@@ -1052,7 +1051,7 @@ body {
 /* Фильтр стоимости: поля для ввода нижней и верхней границы, бегунок */
 
 .catalog-filter-title {
-  color: #fff;
+  color: #ffffff;
   font-size: 20px;
   font-style: normal;
   font-family: "PT Sans", sans-serif;
@@ -1077,7 +1076,7 @@ body {
 }
 
 .price-range-list {
-  color: #000;
+  color: #000000;
   font-size: 18px;
   font-style: normal;
   font-family: "PT Sans", sans-serif;
@@ -1116,7 +1115,7 @@ body {
   line-height: 24px;
   font-family: inherit;
   color: #000000;
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
   border: none;
   appearance: textfield;
   margin: 0;
@@ -1171,7 +1170,7 @@ body {
 }
 
 .catalog-filter-submit {
-  color: #fff;
+  color: #ffffff;
   background-color: #82B3D3;
   font-size: 16px;
   font-style: normal;
@@ -1207,7 +1206,7 @@ body {
 }
 
 .catalog-filter-reset {
-  color: #fff;
+  color: #ffffff;
   background-color: transparent;
   font-size: 16px;
   font-style: normal;
@@ -1230,7 +1229,7 @@ body {
 
 .catalog-filter-reset:focus {
   background-color: transparent;
-  outline: 3px solid #83B3D3;
+  outline: 3px solid #83b3d3;
 }
 
 .catalog-filter-reset:active {
@@ -1247,15 +1246,15 @@ body {
   height: 4px;
   width: 227px;
   left: 0;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 
 .value-max {
   bottom: -8px;
   width: 21px;
   height: 22px;
-  color: #fff;
-  border: #FFFFFF;
+  color: #ffffff;
+  border: #ffffff;
   content: "";
   position: absolute;
   border-radius: 5px;
@@ -1269,8 +1268,8 @@ body {
   bottom: 36px;
   width: 21px;
   height: 22px;
-  color: #fff;
-  border: #FFFFFF;
+  color: #ffffff;
+  border: #ffffff;
   content: "";
   position: absolute;
   border-radius: 5px;
@@ -1285,7 +1284,7 @@ body {
 .catalog-search-title {
   padding: 0;
   margin: 0;
-  min-width: 538px;
+  min-width: 400px;
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
@@ -1293,7 +1292,7 @@ body {
 }
 
 .catalog {
-  color: #000;
+  color: #000000;
   font-size: 30px;
   font-style: normal;
   font-family: "PT Sans", sans-serif;
@@ -1315,7 +1314,6 @@ body {
   position: relative;
   display: flex;
   align-items: center;
-  margin-right: auto;
 }
 
 .select-control {
@@ -1333,7 +1331,7 @@ body {
   background-position: right 16px center;
   background-image: url("../images/icons/icon-dropdown.svg");
   min-width: 300px;
-  border: 2px solid #E5E5E5;
+  border: 2px solid #e5e5e5;
   background-color: transparent;
   border-radius: 4px;
   min-height: 50px;
@@ -1354,7 +1352,7 @@ body {
 }
 
 .select-control-text {
-  color: #333;
+  color: #333333;
   font-size: 18px;
   font-style: normal;
   font-family: "PT Sans", sans-serif;
@@ -1372,7 +1370,8 @@ body {
   padding: 0;
   list-style-type: none;
   gap: 8px;
-  max-width: 170px;
+  max-width: 240px;
+  padding-left: 70px;
 }
 
 .buttons-view-tile {
@@ -1400,19 +1399,19 @@ body {
 }
 
 .buttons-view-tile-current {
-  border: 2px solid #000;
+  border: 2px solid #000000;
 }
 
 .buttons-view-tile:hover,
 .buttons-view-card:hover,
 .buttons-view-list:hover {
-  border: 2px solid #000;
+  border: 2px solid #000000;
 }
 
 .buttons-view-tile:active,
 .buttons-view-card:active,
 .buttons-view-list:active {
-  border: 2px solid #000;
+  border: 2px solid #000000;
 }
 
 .buttons-view-tile:focus,
@@ -1435,7 +1434,7 @@ body {
 }
 
 .product-card-link {
-  color: #000;
+  color: #000000;
   font-size: 24px;
   font-style: normal;
   font-family: "PT Sans", sans-serif;
@@ -1472,7 +1471,7 @@ body {
 }
 
 .product-card-type {
-  color: #333;
+  color: #333333;
   font-size: 18px;
   font-style: normal;
   font-family: "PT Sans", sans-serif;
@@ -1484,7 +1483,7 @@ body {
 }
 
 .product-card-cost {
-  color: #333;
+  color: #333333;
   font-size: 18px;
   font-style: normal;
   font-family: "PT Sans", sans-serif;
@@ -1497,7 +1496,7 @@ body {
 }
 
 .product-card-button-about {
-  color: #fff;
+  color: #ffffff;
   background-color: #756157;
   font-size: 16px;
   font-style: normal;
@@ -1530,12 +1529,12 @@ body {
 }
 
 .product-card-button-about:disabled {
-  background-color: #E5E5E5;
+  background-color: #e5e5e5;
 }
 
 .add-button-favorite {
-  color: #fff;
-  background-color: #82B3D3;
+  color: #ffffff;
+  background-color: #82b3d3;
   font-size: 16px;
   font-style: normal;
   font-family: "PT Sans", sans-serif;
@@ -1544,7 +1543,7 @@ body {
   letter-spacing: 0;
   text-transform: uppercase;
   display: inline-block;
-  padding: 7px;
+  padding: 4px;
   text-align: center;
   align-items: center;
   border-radius: 4px;
@@ -1553,6 +1552,7 @@ body {
   margin-left: 1px;
   margin-right: 1px;
   margin-bottom: 6px;
+  border: transparent;
 }
 
 
@@ -1574,7 +1574,7 @@ body {
 }
 
 .added-button-favorite {
-  color: #fff;
+  color: #ffffff;
   background-color: #7db54f;
   font-size: 16px;
   font-style: normal;
@@ -1584,7 +1584,7 @@ body {
   letter-spacing: 0;
   text-transform: uppercase;
   display: inline-block;
-  padding: 8px;
+  padding: 4px;
   text-align: center;
   align-items: center;
   border-radius: 4px;
@@ -1593,6 +1593,7 @@ body {
   margin-left: 1px;
   margin-right: 1px;
   margin-bottom: 6px;
+  border: transparent;
 }
 
 .added-button-favorite:hover {
@@ -1612,17 +1613,14 @@ body {
   background-color: #e5e5e5;
 }
 
-
-
 .icon-star {
   width: 100%;
   overflow: hidden;
 }
 
-
 .product-card-reiting {
-  color: #333;
-  background-color: #F2F2F2;
+  color: #333333;
+  background-color: #f2f2f2;
   font-size: 16px;
   font-style: normal;
   font-family: "PT Sans", sans-serif;
@@ -1644,7 +1642,7 @@ body {
 }
 
 .product-stars-four {
-  background-image: url(../images/icons/icon-star.svg);
+  background-image: url("../images/icons/icon-star.svg");
   background-repeat: space;
   background-position-y: center;
   width: 89px;
@@ -1653,7 +1651,7 @@ body {
 }
 
 .product-stars-three {
-  background-image: url(../images/icons/icon-star.svg);
+  background-image: url("../images/icons/icon-star.svg");
   background-repeat: space;
   background-position-y: center;
   width: 66px;
@@ -1662,7 +1660,7 @@ body {
 }
 
 .product-stars-two {
-  background-image: url(../images/icons/icon-star.svg);
+  background-image: url("../images/icons/icon-star.svg");
   background-repeat: space;
   background-position-y: center;
   width: 42px;
@@ -1722,7 +1720,7 @@ body {
   padding-top: 97px;
   color: #000000;
   background-image: none;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 
 .subscribe-title-catalog {
@@ -1736,12 +1734,12 @@ body {
 .pagination-link {
   display: block;
   box-sizing: border-box;
-  width: 60px;
+  min-width: 60px;
   min-height: 60px;
   padding: 11px 12px;
   font-size: 20px;
   line-height: 36px;
-  color: #FFFFFF;
+  color: #ffffff;
   background-color: #82B3D3;
   text-decoration: none;
   text-align: center;
@@ -1750,8 +1748,8 @@ body {
 }
 
 .pagination-points {
-  color: #000;
-  background-color: #fff;
+  color: #000000;
+  background-color: #ffffff;
   font-size: 22px;
   font-style: normal;
   font-family: "PT Sans", sans-serif;
@@ -1763,7 +1761,7 @@ body {
 
 .pagination-current {
   color: #000000;
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
   pointer-events: none;
 }
 
@@ -1789,7 +1787,7 @@ body {
   position: relative;
   margin: auto;
   padding: 64px 70px;
-  background: #FFFFFF;
+  background: #ffffff;
   box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15);
   border-radius: 30px;
 }
@@ -1872,7 +1870,7 @@ body {
   font-size: 18px;
   line-height: 24px;
   color: #000000;
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
   border: 2px solid transparent;
   border-radius: 4px;
   background-image: url("../images/calendar.svg");
@@ -1885,11 +1883,11 @@ body {
 }
 
 .modal-form-field:hover {
-  background-color: #E6E6E6;
+  background-color: #e6e6e6;
 }
 
 .modal-form-field:focus {
-  outline: 3px solid #83B3D3;
+  outline: 3px solid #83b3d3;
 }
 
 .modal-form-field:active {
@@ -1909,7 +1907,7 @@ body {
 }
 
 .modal-text-error {
-  color: #FF5757;
+  color: #ff5757;
 }
 
 .modal-form-quantity {
@@ -1932,7 +1930,7 @@ body {
   font-size: 18px;
   line-height: 28px;
   color: #000000;
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
   border: none;
   font-family: inherit;
   text-align: center;
@@ -1945,7 +1943,7 @@ body {
   justify-content: center;
   align-items: center;
   border: none;
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
   outline: none;
   cursor: pointer;
 }
@@ -1961,7 +1959,7 @@ body {
 
 .modal-form-field-button:focus-visible .modal-form-field-icon {
   border-radius: 4px;
-  outline: 3px solid #82B3D3;
+  outline: 3px solid #82b3d3;
 }
 
 .modal-form-field-button:active .modal-form-field-icon{
@@ -2006,8 +2004,8 @@ body {
   margin: 0;
   width: 26px;
   height: 26px;
-  color: #FFFFFF;
-  background-color: #83B3D3;
+  color: #ffffff;
+  background-color: #83b3d3;
   border-radius: 50%;
   align-items: center;
   border: none;
@@ -2038,7 +2036,7 @@ body {
   font-size: 16px;
   line-height: 20px;
   border-radius: 10px;
-  color: #FFFFFF;
+  color: #ffffff;
   background-color: #333333;
   box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
   transform: translateX(-50%);
@@ -2061,6 +2059,11 @@ body {
 }
 
 .modal-form-search {
+  font-style: normal;
+  font-family: "PT Sans", sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin: 0;
   grid-column: 1 / -1;
   margin-top: 48px;
   padding-top: 18px;
@@ -2068,13 +2071,18 @@ body {
   font-size: 20px;
   line-height: 24px;
   word-wrap: break-word;
-  color: #FFFFFF;
-  background-color: #83B3D3;
+  color: #ffffff;
+  background-color: #83b3d3;
   border-radius: 10px;
   border: none;
 }
 
 .modal-form-search:hover,
 .modal-form-search:focus {
-  background-color: #68A2CA;
+  background-color: #68a2cA;
+}
+
+.modal-form-search:active {
+  color: rgba(255, 250, 255, 0.3);
+  background-color: #68a2cA;
 }
